--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<version>2.2.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>in.valaxy</groupId>
-	<artifactId>valaxy</artifactId>
+	<groupId>devops</groupId>
+	<artifactId>devops</artifactId>
 	<version>2.0-RELEASE</version>
 	<packaging>war</packaging>
-	<name>valaxy</name>
-	<description>Valaxy DevOps project for Spring Boot</description>
+	<name>devops</name>
+	<description>DevOps project for Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
